--- a/templates/prediction_summary.html
+++ b/templates/prediction_summary.html
@@ -177,6 +177,7 @@
                             <input type="hidden" name="duration" value="{{ duration }}">
                             <input type="hidden" name="actualMonth" value="{{ actual_month }}">
                             <input type="hidden" name="state_symbol" value="{{ state_code }}">
+                            <input type="hidden" name="from_summary" value="true">
                             <button type="submit" class="details-btn flood-btn">View Detailed Flood Report</button>
                         </form>
                     </div>
